[package]
name = "polkadot-executor"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot node implementation in Rust."

[dependencies]
substrate-executor = { git = "https://github.com/paritytech/substrate", branch = "bkchr-validate_block" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", branch = "bkchr-validate_block" }
polkadot-runtime = { path = "../runtime" }
