[package]
name = "polkadot-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
parity-codec = { version = "3.0", default-features = false }
parity-codec-derive = { version = "3.0", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
substrate-client = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
sr-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
polkadot-parachain = { path = "../parachain", default-features = false }

[dev-dependencies]
substrate-serializer = { git = "https://github.com/paritytech/substrate" }
pretty_assertions = "0.5.1"

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"parity-codec-derive/std",
	"substrate-primitives/std",
	"substrate-client/std",
	"sr-std/std",
	"sr-version/std",
	"sr-primitives/std",
	"serde_derive",
	"serde",
	"polkadot-parachain/std",
]
