[package]
name = "polkadot-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bitvec = { version = "0.8", default-features = false, features = ["alloc"] }
rustc-hex = { version = "2.0.1", default-features = false }
log = { version = "0.3", optional = true }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
polkadot-primitives = { path = "../primitives", default-features = false }
parity-codec = { version = "3.0", default-features = false }
parity-codec-derive = { version = "3.0", default-features = false }
substrate-serializer = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
substrate-client = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
substrate-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
substrate-consensus-aura-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-consensus = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-council = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-democracy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-indices = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-staking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-treasury = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-upgrade-key = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
srml-fees = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }
sr-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "bkchr-validate_block" }

[dev-dependencies]
hex-literal = "0.1.0"
libsecp256k1 = "0.2.1"
tiny-keccak = "1.4.2"
substrate-keyring = { git = "https://github.com/paritytech/substrate" }
substrate-trie = { git = "https://github.com/paritytech/substrate" }
trie-db = "0.11"

[features]
default = ["std"]
std = [
	"bitvec/std",
	"polkadot-primitives/std",
	"rustc-hex/std",
	"parity-codec/std",
	"parity-codec-derive/std",
	"substrate-primitives/std",
	"substrate-client/std",
	"substrate-inherents/std",
	"sr-std/std",
	"sr-io/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-consensus/std",
	"srml-council/std",
	"srml-democracy/std",
	"srml-executive/std",
	"srml-grandpa/std",
	"srml-indices/std",
	"sr-primitives/std",
	"srml-session/std",
	"srml-staking/std",
	"srml-sudo/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-treasury/std",
	"srml-upgrade-key/std",
	"srml-fees/std",
	"sr-version/std",
	"serde_derive",
	"serde/std",
	"log",
	"safe-mix/std"
]
