[package]
name = "polkadot-validation"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
futures = "0.1.17"
parking_lot = "0.7.1"
tokio = "0.1.7"
error-chain = "0.12"
log = "0.4.6"
exit-future = "0.1"
parity-codec = "3.0"
polkadot-availability-store = { path = "../availability-store" }
polkadot-parachain = { path = "../parachain" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime" }
polkadot-statement-table = { path = "../statement-table" }
substrate-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "bkchr-validate_block" }
substrate-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "bkchr-validate_block" }
substrate-consensus-common = { git = "https://github.com/paritytech/substrate", branch = "bkchr-validate_block" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", branch = "bkchr-validate_block" }
substrate-inherents = { git = "https://github.com/paritytech/substrate", branch = "bkchr-validate_block" }
substrate-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "bkchr-validate_block" }
srml-aura = { git = "https://github.com/paritytech/substrate", branch = "bkchr-validate_block" }
substrate-client = { git = "https://github.com/paritytech/substrate", branch = "bkchr-validate_block" }
substrate-trie = { git = "https://github.com/paritytech/substrate", branch = "bkchr-validate_block" }
sr-primitives = { git = "https://github.com/paritytech/substrate", branch = "bkchr-validate_block" }

[dev-dependencies]
substrate-keyring = { git = "https://github.com/paritytech/substrate" }
